--- a/.github/workflows/smoke_test.yaml
+++ b/.github/workflows/smoke_test.yaml
@@ -21,14 +21,10 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: 3.7
-    - name: Install dependencies for funcx-sdk and test requirements
+    - name: install requirements
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install ./funcx_sdk
-        python -m pip install -r funcx_sdk/test-requirements.txt
-    - name: Test sdk by just importing
-      run: |
-        python -c "from funcx.sdk.client import FuncXClient"
+        python -m pip install './funcx_sdk[test]'
     - name: Run smoke tests to check liveness of hosted services
       run: |
         pytest -v funcx_endpoint/tests/smoke_tests --api-client-id ${{ secrets.API_CLIENT_ID }} --api-client-secret ${{ secrets.API_CLIENT_SECRET }}
