--- a/.github/workflows/hourly.yaml
+++ b/.github/workflows/hourly.yaml
@@ -23,6 +23,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install './funcx_sdk[test]'
+        # fixme: Remove this next install line once issue #640 is fixed.
+        python -m pip install './funcx_endpoint'
         python -m pip install safety
     - name: Run smoke tests to check liveness of hosted services
       run: |
