--- a/helm/funcx_endpoint/templates/endpoint-deployment.yaml
+++ b/helm/funcx_endpoint/templates/endpoint-deployment.yaml
@@ -13,6 +13,8 @@ spec:
         app: {{ .Release.Name }}-endpoint
     spec:
       serviceAccountName: {{ template "funcx_endpoint.fullname" . }}
+      securityContext:
+        fsGroup: 1000
       containers:
       - name: {{ .Release.Name }}-endpoint
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
