--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,29 +22,24 @@ jobs:
         run: pre-commit run -a
 
   test-sdk:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+    name: "Test SDK on py${{ matrix.python-version }} x ${{ matrix.os }} "
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         with:
-          python-version: 3.7
+          python-version: ${{ matrix.python-version }}
       - name: install requirements
         run: |
-          python -m pip install -U pip setuptools wheel
-          python -m pip install './funcx_sdk[test]'
-          pip install safety
-      - name: run safety check
-        run: safety check
-
-      # TODO: remove this test
-      # This is the weakest test which does anything, checking that the client can
-      # be imported. As soon as pytest is running again, remove this.
-      - name: check importable
-        run: python -c "from funcx.sdk.client import FuncXClient"
-      # - name: run pytest
-      #   run: |
-      #     cd funcx_sdk
-      #     pytest
+          python -m pip install tox
+      - name: run tests
+        run: |
+          cd funcx_sdk
+          tox -e py
 
   test-endpoint:
     runs-on: ubuntu-latest
