--- a/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
+++ b/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
@@ -34,6 +34,9 @@ data:
                     image="{{ .Values.workerImage }}",
                     worker_init='{{ .Values.workerInit }}',
                     namespace='{{ .Values.workerNamespace }}',
+                    {{- if .Values.workerImageSecret }}
+                    secret: '{{ .Values.workerImageSecret }}',
+                    {{- end }}
                     incluster_config=True
                 ),
             )
