--- a/funcx_endpoint/tox.ini
+++ b/funcx_endpoint/tox.ini
@@ -10,3 +10,13 @@ commands = python -m coverage run -m pytest tests/funcx_endpoint {posargs}
 [testenv:mypy]
 deps = mypy
 commands = mypy funcx_endpoint/
+
+[testenv:publish-release]
+skip_install = true
+deps = build
+       twine
+# clean the build dir before rebuilding
+whitelist_externals = rm
+commands_pre = rm -rf dist/
+commands = python -m build
+           twine upload dist/*
