--- a/funcx_sdk/tox.ini
+++ b/funcx_sdk/tox.ini
@@ -10,3 +10,13 @@ commands = pytest funcx/tests/unit/ funcx/tests/integration/ {posargs}
 [testenv:mypy]
 deps = mypy
 commands = mypy funcx/
+
+[testenv:publish-release]
+skip_install = true
+deps = build
+       twine
+# clean the build dir before rebuilding
+whitelist_externals = rm
+commands_pre = rm -rf dist/
+commands = python -m build
+           twine upload dist/*
