--- a/funcx_endpoint/tox.ini
+++ b/funcx_endpoint/tox.ini
@@ -5,4 +5,6 @@ skip_missing_interpreters = true
 [testenv]
 usedevelop = true
 extras = test
-commands = python -m coverage run -m pytest tests/funcx_endpoint {posargs}
+commands =
+    safety check
+    python -m coverage run -m pytest tests/funcx_endpoint {posargs}
