--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -71,6 +71,6 @@ jobs:
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
           subject: ${{ github.repository }} - Daily Check ${{ job.status }}
-          to: ryan.chard@gmail.com,rchard@anl.gov,chard@uchicago.edu,yadudoc1729@gmail.com,josh@globus.org,bengal1@illinois.edu,benc@hawaga.org.uk,sirosen@globus.org,uriel@globus.org
+          to: ryan.chard@gmail.com,rchard@anl.gov,chard@uchicago.edu,yadudoc1729@gmail.com,josh@globus.org,bengal1@illinois.edu,benc@hawaga.org.uk,sirosen@globus.org
           from: funcX Tests # <user@example.com>
           body: The daily ${{ github.repository }} workflow failed!
