--- a/.github/workflows/hourly.yaml
+++ b/.github/workflows/hourly.yaml
@@ -43,6 +43,6 @@ jobs:
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
           subject: ${{ github.repository }} - Hourly smoke test failed
-          to: ryan.chard@gmail.com,rchard@anl.gov,chard@uchicago.edu,yadudoc1729@gmail.com,josh@globus.org,bengal1@illinois.edu,benc@hawaga.org.uk,sirosen@globus.org,uriel@globus.org
+          to: ryan.chard@gmail.com,rchard@anl.gov,chard@uchicago.edu,yadudoc1729@gmail.com,josh@globus.org,bengal1@illinois.edu,benc@hawaga.org.uk,sirosen@globus.org
           from: funcX Tests # <user@example.com>
           body: The hourly ${{ github.repository }} workflow failed!
