Setup mypy linting on sdk package
Minimal changes to make it pass. Annotate several un-annotated
variables. In the case of the WebSocketPollingTask, the internal
websockets client, `ws`, has been wrapped in a property to
guarantee that it is not-None when used.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,12 +14,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
-      - name: install pre-commit
+      - name: install requirements
         run: |
           python -m pip install -U pip setuptools wheel
-          python -m pip install pre-commit
+          python -m pip install pre-commit tox
       - name: run pre-commit
         run: pre-commit run -a
+      - name: mypy (sdk)
+        run: |
+          cd funcx_sdk
+          tox -e mypy
 
   # ensure docs can build, imitating the RTD build as best we can
   check-docs:
