--- a/funcx_sdk/tox.ini
+++ b/funcx_sdk/tox.ini
@@ -6,3 +6,7 @@ skip_missing_interpreters = true
 usedevelop = true
 extras = test
 commands = pytest funcx/tests/unit/ funcx/tests/integration/ {posargs}
+
+[testenv:mypy]
+deps = mypy
+commands = mypy funcx/
