--- a/funcx_sdk/setup.cfg
+++ b/funcx_sdk/setup.cfg
@@ -6,3 +6,10 @@ known_first_party = funcx,funcx_endpoint
 # config to be black-compatible
 max-line-length = 88
 ignore = E203,W503,W504
+
+[mypy]
+# strict = true
+ignore_missing_imports = true
+warn_unreachable = true
+warn_no_return = true
+exclude = tests
