Setup runnable tox on endpoint (fails)
Configure the funcx_endpoint/tox.ini with a mypy build, but don't try
to run it in CI yet. This currently fails and can be fixed after the
renaming from the `rabbitmq` rearch branch.

--- a/funcx_endpoint/tox.ini
+++ b/funcx_endpoint/tox.ini
@@ -6,3 +6,7 @@ skip_missing_interpreters = true
 usedevelop = true
 extras = test
 commands = python -m coverage run -m pytest tests/funcx_endpoint {posargs}
+
+[testenv:mypy]
+deps = mypy
+commands = mypy funcx_endpoint/
