--- a/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
+++ b/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
@@ -20,7 +20,7 @@ data:
             HighThroughputExecutor(
                 max_workers_per_node={{ .Values.maxWorkersPerPod }},
                 address=address_by_route(),
-                strategy=KubeSimpleStrategy(max_idletime={{ .Values.maxIdleTime | default 3600 }}),
+                strategy=KubeSimpleStrategy(max_idletime={{ .Values.maxIdleTime }}),
                 container_type='docker',
                 scheduler_mode='hard',
                 worker_debug={{ .Values.workerDebug }},
