--- a/helm/funcx_endpoint/Chart.yaml
+++ b/helm/funcx_endpoint/Chart.yaml
@@ -1,13 +1,15 @@
 apiVersion: v2
 name: funcx_endpoint
-description: Deploy a funcX endpoint into a cluster
+description: Deploy a BENC funcX endpoint into a cluster
 
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.3.4
+version: 0.3.5-benc1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: 0.3.4
+appVersion: 0.3.5-benc1
+
+
