--- a/helm/funcx_endpoint/templates/role.yaml
+++ b/helm/funcx_endpoint/templates/role.yaml
@@ -12,4 +12,7 @@ rules:
 - apiGroups: [""]
   resources: ["pods"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: [""]
+  resources: ["pods/status"]
+  verbs: ["get"]
 {{- end }}
