Update smoke tests to handle login manager
In the event that the smoke tests are running against old code, they
need to pass authorizers. On the new version, they will pass a login
manager object to simulate a logged-in state.

To handle this, try to import the LoginManagerProtocol and use it for
a runtime check to ensure we've implemented everything necessary. If
the import fails, failover to the current (old) behavior.

--- a/smoke_tests/tox.ini
+++ b/smoke_tests/tox.ini
@@ -29,3 +29,8 @@ deps =
     -e ../funcx_endpoint
     pytest
 commands = pytest -v {posargs}
+
+[flake8]  # black-compatible
+ignore = W503, W504, E203, B008
+# TODO: reduce this to 88 once `black` is applied to all code
+max-line-length = 88
