Add coverage reporting to tox output for funcx
Run pytest under `coverage` and report coverage showing the exact
lines which are not tested.

--- a/funcx_sdk/tox.ini
+++ b/funcx_sdk/tox.ini
@@ -5,7 +5,10 @@ skip_missing_interpreters = true
 [testenv]
 usedevelop = true
 extras = test
-commands = pytest {posargs}
+commands =
+    coverage erase
+    coverage run -m pytest {posargs}
+    coverage report --skip-covered
 
 [testenv:mypy]
 deps = mypy
