--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
   rev: 22.1.0
   hooks:
     - id: black
+      additional_dependencies: ['click==8.0.4']
 - repo: https://github.com/PyCQA/isort
   rev: 5.10.1
   hooks:
