In workflows using tox, ensure pip is up to date
Whenever we `pip install tox`, first `pip install -U pip setuptools`.
This ensures that we get the latest `tox` version and that dependency
solving is done correctly.

--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -15,8 +15,8 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: 3.7
-    - name: install tox
-      run: python -m pip install 'tox'
+    - run: python -m pip install -U pip setuptools
+    - run: python -m pip install 'tox'
     - name: run smoke tests (dev)
       env:
         FUNCX_SMOKE_CLIENT_ID: ${{ secrets.API_CLIENT_ID }}
