--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,8 +60,8 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: install tox
-        run: python -m pip install tox
+      - run: python -m pip install -U pip setuptools
+      - run: python -m pip install tox
       - name: run tests
         run: |
           cd funcx_sdk
@@ -79,8 +79,8 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: install tox
-        run: python -m pip install tox
+      - run: python -m pip install -U pip setuptools
+      - run: python -m pip install tox
       - name: run tests
         run: |
           cd funcx_endpoint
