--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -95,6 +95,10 @@ jobs:
         run: |
           cd funcx_endpoint
           tox -e py
+      - name: Collect Docker Logs
+        if: failure()
+        uses: jwalton/gh-docker-logs@v2.2.0
+
 
   publish:
     # only trigger on pushes to the main repo (not forks, and not PRs)
