--- a/.github/workflows/hourly.yaml
+++ b/.github/workflows/hourly.yaml
@@ -29,20 +29,20 @@ jobs:
         cd smoke_tests
         make prod
 
-  notify:
-    runs-on: ubuntu-latest
+  slack-notify:
     needs: [smoke-test]
-    if: failure()
+    if: always()
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
     steps:
-      # FIXME: make this send to a listhost or Slack
-      - name: Send mail
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: smtp.gmail.com
-          server_port: 465
-          username: ${{secrets.MAIL_USERNAME}}
-          password: ${{secrets.MAIL_PASSWORD}}
-          subject: ${{ github.repository }} - Hourly smoke test failed
-          to: ryan.chard@gmail.com,rchard@anl.gov,chard@uchicago.edu,yadudoc1729@gmail.com,josh@globus.org,bengal1@illinois.edu,benc@hawaga.org.uk,sirosen@globus.org
-          from: funcX Tests # <user@example.com>
-          body: The hourly ${{ github.repository }} workflow failed!
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - run: python -m pip install -U requests
+      - name: notify slack
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_CHANNEL: '#commits'
+          SLACK_MESSAGE_TITLE: 'Hourly Automated Tests'
+          SLACK_FAILURE_MESSAGE: 'Hourly run failed'
+        run: ./.github/_support/github-slack-notify.py ${{ needs.smoke-test.result }}
