--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,3 +33,8 @@ repos:
   hooks:
     - id: flake8
       additional_dependencies: ['flake8-bugbear==21.4.3']
+
+
+ci:
+  # remove this once the 'rabbitmq' branch merges
+  autoupdate_branch: rabbitmq
