--- a/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
+++ b/helm/funcx_endpoint/templates/endpoint-instance-config.yaml
@@ -24,6 +24,7 @@ data:
                 container_type='docker',
                 scheduler_mode='hard',
                 worker_debug={{- ternary "True" "False" .Values.workerDebug }},
+                working_dir='{{ .Values.logDir }}',
                 provider=KubernetesProvider(
                     init_blocks={{ .Values.initBlocks }},
                     min_blocks={{ .Values.minBlocks }},
@@ -44,7 +45,6 @@ data:
         ],
         heartbeat_period=15,
         heartbeat_threshold=200,
-        log_dir='{{ .Values.logDir }}',
         funcx_service_address="{{ .Values.funcXServiceAddress }}/v2",
         detach_endpoint={{- ternary "True" "False" .Values.detachEndpoint }}
     )
