Add RabbitMQAdmin for testing broker side disconnects.

--- a/funcx_endpoint/tox.ini
+++ b/funcx_endpoint/tox.ini
@@ -5,6 +5,7 @@ skip_missing_interpreters = true
 [testenv]
 passenv =
     RABBITMQ_INTEGRATION_TEST_URI
+    RABBITMQ_ADMIN_URI
 extras = test
 usedevelop = true
 commands =
