Tests for FuncXExecutor refactor
A majority of the FuncXExecutor codebase and related changes are now tested.

--- a/funcx_sdk/tox.ini
+++ b/funcx_sdk/tox.ini
@@ -3,6 +3,8 @@ envlist = py{310,39,38,37}
 skip_missing_interpreters = true
 
 [testenv]
+passenv =
+    FUNCX_INTEGRATION_TEST_WEB_URL
 usedevelop = true
 extras = test
 commands =
