Enable smoke tests against a LOCAL setup

--- a/smoke_tests/tox.ini
+++ b/smoke_tests/tox.ini
@@ -6,6 +6,7 @@ envlist = py
 passenv =
     FUNCX_LOCAL_ENDPOINT_ID
     FUNCX_LOCAL_ENDPOINT_NAME
+    FUNCX_LOCAL_KNOWN_FUNCTION_ID
     FUNCX_SMOKE_CLIENT_ID
     FUNCX_SMOKE_CLIENT_SECRET
 # don't try to install a package
@@ -21,6 +22,7 @@ commands = pytest -v {posargs}
 passenv =
     FUNCX_LOCAL_ENDPOINT_ID
     FUNCX_LOCAL_ENDPOINT_NAME
+    FUNCX_LOCAL_KNOWN_FUNCTION_ID
     FUNCX_SMOKE_CLIENT_ID
     FUNCX_SMOKE_CLIENT_SECRET
 # don't try to install a package
