Timeout tests after 10 mins

--- a/.github/workflows/hourly.yaml
+++ b/.github/workflows/hourly.yaml
@@ -12,6 +12,7 @@ on:
 jobs:
   smoke-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
     - uses: actions/checkout@v2
       with:
